Updating margins and padding to remove extra space Also, to prevent p text 'touching' edge of viewport

--- a/main.css
+++ b/main.css
@@ -1,12 +1,18 @@
 /* TITLE BANNER */
 .pg-title {
   background-color: rgb(234, 224, 245);
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 100vw;
+}
+
+body {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
 }
 
 /* BACKGROUND IMAGE */
@@ -16,7 +22,6 @@ main {
   background-attachment: fixed;
   margin: 0 auto;
   height: auto;
-
 }
 
 #opener {
@@ -211,12 +216,19 @@ footer {
     padding-bottom: 2%;
   }
   
+
+
   /* BACKGROUND IMAGE */
   main {
     background-image: none;
     background-color: rgb(251, 242, 231);
     margin: 0 auto;
     flex-wrap: wrap;
+    width: 100vw;
+    padding: 0;
+  }
+
+  body {
     width: 100vw;
   }
   
@@ -250,6 +262,10 @@ footer {
     width: 100vw;
     padding: 0;
     margin: 0;
+  }
+
+  #bio h4 {
+    padding: 0 2vw 0 2vw;
   }
 
   /* FIRST TWO LOGOS */
@@ -325,7 +341,7 @@ footer {
     align-items: center;
     background-image: none;
     background-color: rgb(251, 242, 231);
-    padding: 0%;
+    padding: 0;
     border: none;
     margin: 0%;
     width: 100vw;
@@ -340,6 +356,13 @@ footer {
     margin: 0;
   }
   
+  #desc p {
+    padding-left: 2vw;
+    padding-right: 2vw;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   #book-img {
     order: 2;
     background-color: rgb(251, 242, 231);
